security-group.tf
# Create security group for ALB
resource "aws_security_group" "alb-security-group" {
  name        = "ALB Security Group"
  description = "Enable HTTP/HTTPS access on ALB port 80/443"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "HTTP port access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS port access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ALB Security Group"
  }
}

# Create security group for Bastion host aka Jump server

resource "aws_security_group" "ssh-security-group" {
  name        = "SSH Access"
  description = "Enable ssh access on port 22"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "SSH Access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.ssh-location}"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "SSH Security Group"
  }
}

resource "aws_security_group" "webserver-security-group" {
  name = "Web Server Security Group"
  description = "Enable HTTP/HTTPS access on 80/443 via ALB and SSH on port 80 via SSH SG"
  vpc_id = aws_vpc.vpc.id

  ingress {
    description = "HTTP Access"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = ["${aws_security_group.alb-security-group.id}"]
  }

  ingress {
    description = "HTTPS Access"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    security_groups = ["${aws_security_group.alb-security-group.id}"]
  }  

  ingress {
    description = "SSH Access"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = ["${aws_security_group.ssh-security-group.id}"]
  }
  egress{
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Webserver Security Group"
  }
}

resource "aws_security_group" "database-security-group" {
  name = "Database Security Group"
  description = "Enable MYSQL/Arora DB access on port 3306"
  vpc_id = aws_vpc.vpc.id

  ingress {
    description = "MYSQL/Arora DB Access"
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    security_groups = ["${aws_security_group.webserver-security-group.id}"]
  }  

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "Database Access Group"
    }
}
